--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h3 id="syllabus-shell">The Unix Shell</h3>
     <ul>
-      <li>Files and directories</li>
+      <li>Navigating Files and directories</li>
       <li>History and tab completion</li>
       <li>Pipes and redirection</li>
       <li>Looping over files</li>
@@ -29,12 +29,12 @@
   <div class="col-md-6">
     <h3 id="syllabus-r">Programming in R</h3>
     <ul>
-      <li>Working with vectors and data frames</li>
+      <li>Types of data structures in R</li>
+      <li>Exploring vectors and data frames</li>
       <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Using R from the command line</li>
-      <li><a href="{{site.swc_pages}}/r-novice-inflammation/reference/">Reference...</a></li>
+      <li>Data frame manipulation with dplyr & tidyr</li>
+      <li>Creating and using functions</li>      
+      <li><a href="{{site.swc_pages}}/r-novice-gapminder/reference/">Reference...</a></li>
     </ul>
   </div>
   <!--
@@ -59,10 +59,8 @@
       <li>Creating a repository</li>
       <li>Recording changes to files: <code>add</code>, <code>commit</code>, ...</li>
       <li>Viewing changes: <code>status</code>, <code>diff</code>, ...</li>
-      <li>Ignoring files</li>
-      <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, ...</li>
-      <li>Resolving conflicts</li>
-      <li>Open licenses</li>
+      <li>Working on the web: <code>clone</code>, <code>pull</code>, <code>push</code>, <code>fork</code>, ...</li>
+      <li>Real world GitHub repository examples</li>
       <li>Where to host work, and why</li>
       <li><a href="{{site.swc_pages}}/git-novice/reference/">Reference...</a></li>
     </ul>
