--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>February 15, 2018</h3>
     <table class="table table-striped">
       <tr> <td>08:30</td>  <td><a href="https://swcarpentry.github.io/shell-novice/" target="_blank"> Automating tasks with the Unix shell</a></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
@@ -14,7 +14,7 @@
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>February 16, 2018</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/git-novice/" target="_blank"> Version Control with Git </a></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
