--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -6,9 +6,9 @@
       <tr> <td>10:30</td>  <td>Break</td> </tr>
       <tr> <td>10:45</td>  <td><a href="https://swcarpentry.github.io/shell-novice/" target="_blank"> Continue Shell lesson</a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/" target="_blank"> Intro to Programming with R</a></td> </tr>
+      <tr> <td>13:00</td>  <td><a href="https://carriebrown.github.io/r-novice-gapminder/" target="_blank"> Intro to Programming with R</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break</td> </tr>
-      <tr> <td>14:45</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/" target="_blank"> Intro to Programming with R</a></td> </tr>
+      <tr> <td>14:45</td>  <td><a href="https://carriebrown.github.io/r-novice-gapminder/" target="_blank"> Intro to Programming with R</a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
@@ -20,9 +20,9 @@
       <tr> <td>10:30</td>  <td>Break</td> </tr>
       <tr> <td>10:45</td>  <td><a href="http://swcarpentry.github.io/git-novice/" target="_blank"> Version Control with Git </a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/" target="_blank">Data Manipulation & Plotting with R</a></td> </tr>
+      <tr> <td>13:00</td>  <td><a href="https://carriebrown.github.io/r-novice-gapminder/" target="_blank">Data Manipulation & Plotting with R</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break</td> </tr>
-      <tr> <td>14:45</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/" target="_blank">Data Manipulation & Plotting with R</a></td> </tr>
+      <tr> <td>14:45</td>  <td><a href="https://carriebrown.github.io/r-novice-gapminder/" target="_blank">Data Manipulation & Plotting with R</a></td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td>END</td> </tr>
     </table>
