--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -16,9 +16,9 @@
   <div class="col-md-6">
     <h3>February 16, 2018</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/git-novice/" target="_blank"> Version Control with Git </a></td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://rrlove.github.io/git-novice-topdown/" target="_blank"> Version Control with Git </a></td> </tr>
       <tr> <td>10:30</td>  <td>Break</td> </tr>
-      <tr> <td>10:45</td>  <td><a href="http://swcarpentry.github.io/git-novice/" target="_blank"> Version Control with Git </a></td> </tr>
+      <tr> <td>10:45</td>  <td><a href="https://rrlove.github.io/git-novice-topdown/" target="_blank"> Version Control with Git </a></td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td><a href="https://cfgauss.github.io/r-novice-gapminder/" target="_blank">Data Manipulation & Plotting with R</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break</td> </tr>
